2009-08-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: Escape non-ascii characters etc in author.

2009-08-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: Fix for handling empty key values in
	XML property lists.

2009-08-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix error in memory allocation debug when
	swizzling a class.

2009-07-30  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/Foundation/Foundation.h: Included NSKeyValueObserving.h.

2009-07-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Correct the text in exception when attempting
	to read a response on an invalidated connection.
	* Source/Additions/GSMime.m:
	Fixup incorrect declaration of method in wrong class implementation.

2009-07-27  David Ayers  <ayers@fsfe.org>

	* Source/Additions/GSCompatibility.m ([-boolValue]): Only compile
	for OS X Versions below 10.5 and sync implementation with -base.
	Reported by: Georg Fleischmann
	
2009-07-23 Richard Frith-Macdonald <rfm@gnu.org>

	* GSHTTPURLHandle.m:
	* NSURLProtocol.m:
	Include the port in the 'Host' header if it's specified in the URL.

2009-07-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInternal.h: New macros for CLANG/non-fragile ivar compat.
	* Source/NSOperation.m: Use new macros.

2009-07-17 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: Fix includes and text of comments at start
	of document.

2009-07-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSOperation.h:
	* Source/NSOperation.m:
	Various changes for maintainability and coding standards ... nothing
	which should effect functionality.
	
2009-07-14 20:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSOperation.h
	* Source/NSOperation.m: Added initial implementation of
	NSOperationQueue.

2009-07-13 14:15-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/Foundation.h
	* Headers/Foundation/NSOperation.h